# pedersen

./: Cargo.toml  README.md
examples/server-client/: Cargo.toml  README.md  dev.sh
examples/server-client/client/: Cargo.toml  README.md  index.html  main.js  run.sh
examples/server-client/client/src/: lib.rs
examples/server-client/server/: Cargo.toml  README.md
examples/server-client/server/src/: handle_request.rs  main.rs  traits.rs  types.rs
examples/server-client/server/src/utils/: mod.rs  network.rs
pedersen/: Cargo.toml
src/: commit.rs  lib.rs  traits.rs  verify.rs
src/errors/: error.rs
src/protocol/: commit.rs  mod.rs  setup.rs  verify.rs
