[package]
name = "pedersen"
version = "0.1.0"
authors = ["Paul de Lange <p.delange@uky.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "3" }
sha2 = "0.9.3"
rand_core = "0.5.1"
digest = "0.9.0"
