[package]
name = "pedersen"
version = "0.1.0"
authors = ["Paul de Lange <p.delange@uky.edu>"]
edition = "2018"
readme = "README.md"
keywords = ["cryptography"]
repository = "https://github.com/paulmoonshine/pedersen.git"


[dependencies]
rand_core = "0.5.1"
[dev-dependencies]
curve25519-dalek = { version = "3" }
sha2 = "0.9.3"

